# hop_and_barley

./: .env.example  .gitignore  .prettierrc.yml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  seed.py
admin_panel/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
orders/: __init__.py  admin.py  apps.py  cart.py  context_processor.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_order_address_order_city_order_full_name_order_phone_and_more.py  0004_alter_order_options_rename_created_order_created_at_and_more.py
orders/services/: email_service.py
products/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_picture_url.py  0003_alter_product_picture_url.py
reviews/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_rating.py
services/: __init__.py  async_utils.py  email_service.py
static/css/: admin.css  main.css
static/js/: admin.js  cart.js  main.js
templates/: account.html  base.html  cart.html  checkout.html  forgot_password.html  guides-recipes.html  home.html  login.html  order_created.html  product-caramel-malt.html  product-cascade-hops.html  product-centennial-hops.html  product-citra-hops.html  product-imperial-yeast.html  product-maris-otter-malt.html  product-mosaic-hops.html  product-pilsner-malt.html  product-saaz-hops.html  product-safale-us05-yeast.html  product-unmalted-wheat.html  product-west-coast-ipa-kit.html  product_detail.html  register.html
templates/admin/: add.html  dashboard.html  products.html
templates/emails/: order_created_admin.txt  order_created_customer.txt
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py
