[project]
name = "hop-and-barley"
version = "0.1.0"
description = "This is learning project in university \"Java Rush\". Project is internet shop. This template may be use for your projects."
authors = [
    {name = "Alexandr Altukhov",email = "sam@littlebox.spb.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
django-debug-toolbar = "^6.2.0"
django-extensions = "^4.1"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"
factory-boy = "^3.3.3"
flake8 = "^7.3.0"
mypy = "^1.19.1"
django-stubs = "^5.2.9"

