[project]
name = "hop-and-barley"
version = "0.1.0"
description = "This is learning project in university \"Java Rush\". Project is internet shop. This template may be use for your projects."
authors = [
    {name = "Alexandr Altukhov",email = "sam@littlebox.spb.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "django-filter (>=25.2,<26.0)",
    "unidecode (>=1.4.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
django-debug-toolbar = "^6.2.0"
django-extensions = "^4.1"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"
factory-boy = "^3.3.3"
ruff = "^0.14.11"
mypy = "^1.19.1"
django-stubs = "^5.2.9"
django-stubs-ext = "^5.2.9"
djlint = "^1.36.4"
djangorestframework-stubs = "^3.16.8"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "build",
    "dist",
    # Django-специфичные исключения:
    "*/migrations/",  # Все директории с миграциями
    "*/tests/",       # Все директории с тестами
    ".*test.*",       # Все отдельные тесты
    "manage.py",      # Главный скрипт
    "seed.py",        # Скрипт начальных данных
    "settings.py",    # Файл настроек может быть специфичным
    # Дополнительные исключения по необходимости
    "docs/",
    "static/",
]

[tool.ruff.lint]
select = [
    "E",   # Базовые ошибки синтаксиса и логики
    "F",   # Базовые ошибки синтаксиса и логики
    "I",   # Сортировка и форматирование импортов
    "B",   # Находит потенциальные логические ошибки и "запахи" в коде
    "UP",  # Предлагает использовать более современный синтаксис Python
    "DJ",  # Специализированные правила для Django и DRF
    "S",   # Безопасность. Ищет потенциальные уязвимости
    "D",   # Обеспечивает, чтобы ваши функции, классы и методы были документированы.
    "C4",  # Более эффективные list/dict/set comprehensions. Предлагает заменить неоптимальные конструкции
    "A",   # Предотвращает "затенение" встроенных имен. Не дает вам случайно назвать переменную list или str.
]
ignore = [
    "D203", # Отключаем правило, требующее пустую строку перед классом
    "D212", # Отключаем правило, требующее описание на той же строке
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["D"]
"**/admin.py" = ["D"]
"**/wsgi.py" = ["D"]
"**/urls.py" = ["D"]
"**/asgi.py" = ["D"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = "mypy_django_plugin.main"
exclude = [
    ".git",
    "__pycache__",
    "venv/",
    "build/",
    "dist/",
    # Django-специфические исключения:
    "migrations/",    # Все директории с миграциями
    "tests/",         # Все директории с тестами
    ".*test.*",       # Все отдельные тесты
    "seed.py",        # Скрипт начальных данных
    "manage.py",      # Главный скрипт
    "settings.py",    # Файл настроек может быть специфичным
    # Дополнительные исключения по необходимости
    "docs/",
    "static/",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.djlint]
profile = "django"
extend-ignore = "H006,T002,T003,H021"